tests/fixtures/invalid/set_div_bool.py
# Cannot divide Set[int] and Bool
x: float = {1, 2, 3} / True
